functionality updates and cleanup

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,15 +1,11 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: eConsultancy.wsgi:application
+    WSGIPath: application:application
   aws:elasticbeanstalk:application:environment:
-    DJANGO_SETTINGS_MODULE: eConsultancy.settings_prod
-    PYTHONPATH: /var/app/current:$PYTHONPATH
-  aws:elasticbeanstalk:container:python:staticfiles:
-    /static/: staticfiles/
-
-container_commands:
-  01_migrate:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate --noinput"
-    leader_only: true
-  02_collectstatic:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py collectstatic --noinput"
+    DJANGO_SETTINGS_MODULE: eConsultancy.settings_free_tier
+    PYTHONPATH: /var/app/current
+  aws:autoscaling:launchconfiguration:
+    IamInstanceProfile: aws-elasticbeanstalk-ec2-role
+    InstanceType: t3.micro
+  aws:elasticbeanstalk:environment:
+    EnvironmentType: SingleInstance
