--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,54 @@
-# Django Settings
-SECRET_KEY=your-secret-key-here
-DEBUG=False
-ALLOWED_HOSTS=your-domain.com,www.your-domain.com
+# Django Environment Variables Example
+# Copy this file to .env and fill in your actual values
 
-# Database (PostgreSQL on AWS RDS)
-DB_NAME=econsultancy
-DB_USER=postgres
-DB_PASSWORD=your-db-password
-DB_HOST=your-rds-endpoint.amazonaws.com
-DB_PORT=5432
+# SECURITY WARNING: keep the secret key used in production secret!
+SECRET_KEY=your-django-secret-key-here-generate-a-new-one
 
-# AWS S3 (for media files)
-USE_S3=TRUE
-AWS_ACCESS_KEY_ID=your-access-key
-AWS_SECRET_ACCESS_KEY=your-secret-key
-AWS_STORAGE_BUCKET_NAME=your-bucket-name
+# SECURITY WARNING: don't run with debug turned on in production!
+DEBUG=True
+
+# Allowed hosts (comma-separated)
+ALLOWED_HOSTS=localhost,127.0.0.1
+
+# Database Configuration
+# For development, you can use SQLite (default)
+# For production, use PostgreSQL or MySQL
+DB_ENGINE=django.db.backends.sqlite3
+DB_NAME=db.sqlite3
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+
+# For PostgreSQL (production)
+# DB_ENGINE=django.db.backends.postgresql
+# DB_NAME=your_database_name
+# DB_USER=your_database_user
+# DB_PASSWORD=your_database_password
+# DB_HOST=your_database_host
+# DB_PORT=5432
+
+# Email Configuration (optional)
+EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+EMAIL_HOST=
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+
+# AWS S3 Configuration (optional)
+USE_S3=False
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_STORAGE_BUCKET_NAME=
 AWS_S3_REGION_NAME=us-east-1
 
-# CORS
-CORS_ALLOWED_ORIGINS=https://your-frontend-domain.com
+# CORS Configuration
+CORS_ALLOWED_ORIGINS=http://localhost:4200,http://127.0.0.1:4200
+
+# Media and Static Files
+MEDIA_URL=/media/
+STATIC_URL=/static/
+
+# Logging Level
+LOG_LEVEL=INFO
